# TelltaleHydra

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/tth/: enum.hpp  flags.hpp  handle.hpp  string.hpp  toolprops.hpp  trange.hpp
include/tth/animation/: animation.hpp  keyframe.hpp
include/tth/container/: dcarray.hpp  list.hpp  map.hpp  sarray.hpp  set.hpp
include/tth/convert/: asset.hpp
include/tth/core/: any.hpp  errno.hpp  log.hpp  utils.hpp
include/tth/crypto/: blowfish.hpp  crc64.hpp
include/tth/d3dmesh/: d3dmesh.hpp
include/tth/linalg/: quaternion.hpp  transform.hpp  vector.hpp
include/tth/meta/: flags.hpp  meta.hpp  toolprops.hpp
include/tth/meta/animation/: animation.hpp  keyframe.hpp
include/tth/meta/bitset/: base.hpp
include/tth/meta/chore/: chore.hpp
include/tth/meta/container/: dcarray.hpp  map.hpp  ptr.hpp  sarray.hpp  set.hpp
include/tth/meta/crc64/: crc64.hpp  symbol.hpp
include/tth/meta/d3dmesh/: d3dmesh.hpp
include/tth/prop/: prop.hpp
include/tth/skeleton/: skeleton.hpp
include/tth/stream/: object.hpp  stream.hpp
include/tth/texture/: color.hpp  t3texture.hpp
src/: CMakeLists.txt  main.cpp
src/convert/: CMakeLists.txt  asset.cpp
src/core/: CMakeLists.txt  any.cpp
src/dynamic/: CMakeLists.txt
src/dynamic/MCSM2/: CMakeLists.txt
src/dynamic/TWDDE/: CMakeLists.txt
src/linalg/: CMakeLists.txt  quaternion.cpp  transform.cpp  vector.cpp
src/meta/: CMakeLists.txt
src/meta/crc64/: CMakeLists.txt  crc64.cpp
src/stream/: CMakeLists.txt  stream.cpp
(+53 files in other folders)
